# COVID-19-simulation

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  conanfile.py  data.yaml  docker-compose.yml  gcc-8  person.h  plot.py  simulation.cpp  stats.h  test_stats.cpp
covid_graphs/: Dockerfile  README.md  create_dev_venv.sh  dev_requirements.txt  format_code.sh  pyproject.toml  run_tests.sh  setup.cfg  setup.py
covid_graphs/covid_fitting/: Makefile  README.md  requirements.txt
covid_graphs/covid_fitting/docs/: Makefile  conf.py  index.rst  make.bat
covid_graphs/covid_fitting/notebooks/: 001_mb_model_comparison.ipynb  002_mb_prediction-stability.ipynb
covid_graphs/covid_graphs/: bayesian.py  country.py  country_graph.py  country_report.py  fit_atg_model.py  fit_atg_model_test.py  formula.py  formula_test.py  heat_map.py  prediction_generator.py  predictions.py  prepare_data.py  scatter_plot.py  simulation_report.py  wsgi.py
covid_graphs/covid_graphs/pb/: atg_prediction.proto  atg_prediction_pb2.py  country_data_pb2.py
covid_graphs/covid_graphs/scripts/: converter.py  country_dashboard.py  index.html  prepare_data.py  rest.py  server.py  (+1 more)
covid_graphs/nginx/: nginx.conf
covid_graphs/react-web/: Dockerfile  README.md  package-lock.json
data/: Australia.data  Austria.data  Belgium.data  Canada.data  Chile.data  Croatia.data  Cyprus.data  Czechia.data  Estonia.data  Finland.data  France.data  Georgia.data  Germany.data  Greece.data  Hungary.data  Iceland.data  Iran.data  Ireland.data  Israel.data  Italy.data  Japan.data  Jordan.data  Korea.data  Latvia.data  Lithuania.data  Malaysia.data  Monaco.data  Morocco.data  NZ.data  Netherlands.data  Norway.data  Poland.data  Portugal.data  Romania.data  Russia.data  Serbia.data  Slovakia.data  Slovenia.data  Spain.data  Sweden.data  (+24 more)
data/predictions/: Australia.atg  Austria.atg  Belgium.atg  Canada.atg  Chile.atg  Croatia.atg  Cyprus.atg  Czechia.atg  Estonia.atg  Finland.atg  France.atg  Georgia.atg  Germany.atg  Greece.atg  Hungary.atg  Iceland.atg  Iran.atg  Ireland.atg  Israel.atg  Italy.atg  Japan.atg  Jordan.atg  Korea.atg  Latvia.atg  Lithuania.atg  Malaysia.atg  Monaco.atg  Morocco.atg  NZ.atg  Netherlands.atg  Norway.atg  Poland.atg  Portugal.atg  Romania.atg  Russia.atg  Serbia.atg  Slovakia.atg  Slovenia.atg  Spain.atg  Sweden.atg  (+7 more)
graphs/: Dockerfile  README.md  country.py  country_data_pb2.py  fit_atg_model.py  fit_atg_model_test.py  growth.py  heat_map.py  index.html  plot.py  power_law.py  prepare_data.py  requirements.txt  scatter_plot.py  server.py  simulation_results_pb2.py
python/: Dockerfile  README.md  dev_requirements.txt  format_code.sh  run_tests.sh  setup.cfg  setup_environment.sh
python/covid_graphs/: setup.py
python/covid_web/: flask_server.sh  setup.py
simulation/: CMakeLists.txt  README.md  Slovakia.data  conanfile.py
simulation/src/: country_data.proto  generators.h  simulation_results.proto
simulation/tests/: test_stats.cpp
src/: country_data.proto  country_info.proto  generators.h  person.h  population_model.h  result.h  simulation.cpp  simulation_results.proto  stats.h
tests/: test_generators.cpp  test_stats.cpp
web/: README.md  setup.py
web/covid_web/: country_dashboard.py  rest.py  server.py  wsgi.py
web/nginx/: nginx.conf
web/react-web/: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json
web/src/: App.css  App.js  sharedObjects.js
(+64 files in other folders)
